# iris

./: .bazelrc  .gitignore  README.md  WORKSPACE  core_library_deps.bzl
.github/workflows/: ci.yml  full_test.yml  linux.yml  linux_test.yml  macos_test.yml  smoke_test.yml  windows_test.yml
catalog/: BUILD.bazel  bright_star_catalog.cc  bright_star_catalog.h  bright_star_catalog_test.cc  catalog.proto  catalog_reader.h
ode/: BUILD.bazel  backward_euler.h  backward_euler_test.cc  forward_euler.h  forward_euler_test.cc  ode_integrators_test.cc
