cc_library(
    name = "ode",
    hdrs = [
        "backward_euler.h",
        "forward_euler.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//third_party/eigen",
    ],
)

cc_test(
    name = "ode_test",
    srcs = [
        "backward_euler_test.cc",
        "forward_euler_test.cc",
    ],
    deps = [
        ":ode",
        "//third_party/eigen",
        "//third_party/gtest",
    ],
)
